pkg/bucket/test/bucket-obus-node-01-eds-rds-60001-60002-route-weighted.yaml
#
# configures 1 node, 2 clusters,2 weighted routes
#
nodes:
- obus-node-01
endpoints:
  version: bucket-obus-node-01-eds-rds-60001-60002-route-weighted.yaml
  items: 
    - cluster_name: obus-server-60001
      hosts:
        - socket_address:
            address: localhost
            port_value: 60001
    - cluster_name: obus-server-60002
      hosts:
        - socket_address:
            address: localhost
            port_value: 60002
routes:
  version: bucket-obus-node-01-eds-rds-60001-60002-route-weighted.yaml
  items:
    - route_name: "obus_server_route"
      virtual_hosts:
        - name: "virtual_host_name"
          domains: ["*"]
          routes:
          - match: { prefix: "/obus." }
            route:
#              cluster_name: "can be omitted"
              weighted_clusters:
                clusters:
                  - name: obus-server-60001
                    weight: 50
                  - name: obus-server-60002
                    weight: 50
                total_weight: 100
