pkg/bucket/test/bucket-obus-node-01-eds-rds-60001-route-direct.yaml
# configures 1 node 1 cluster properly
nodes:
- obus-node-01

endpoints:
  version: bucket-obus-node-01-eds-rds-60001-route-direct.yaml
  items: 
    - cluster_name: obus-server-60001
      hosts:
        - socket_address:
            address: localhost
            port_value: 60001
        - socket_address:
            address: localhost
            port_value: 60099

routes:
  version: bucket-obus-node-01-eds-rds-60001-route-direct.yaml
  items:
    - route_name: "obus_server_route"
      virtual_hosts:
        - name: "virtual_host_name"
          domains: ["*"]
          routes:
          - match: { prefix: "/obus." }
            route:
              cluster_name: "obus-server-60001"
